@@ -89,8 +89,8 @@ class CFcolourmap(object):
                 
     def __get_cptfile(self):
         if self.__cptfile == '.__auto.cpt':
-            v0 = min(Numeric.ravel(self.var.var))
-            v1 = max(Numeric.ravel(self.var.var))
+            v0 = PyGMT.round_down(min(Numeric.ravel(self.var.var)))
+            v1 = PyGMT.round_up(max(Numeric.ravel(self.var.var)))
             PyGMT.command('makecpt','-Crainbow -T%f/%f/%f > .__auto.cpt'%(v0,v1,(v1-v0)/10.))
         return self.__cptfile
     cptfile = property(__get_cptfile)
